# grove-web

./: .env.example  .gitignore  CLAUDE.md  next.config.ts  package-lock.json  package.json  pyproject.toml  skills-lock.json
.specify/memory/: constitution.md
config/: consumer.yaml  producer.yaml
docs/architecture/: skeleton-loading.md  sync-consumer.md  sync-downloads.md  sync-producer.md
docs/ytdl-sub/: automating-downloads.md  config-reference.md  deprecation-notices.md  entry-variables.md  faq.md  first-config.md  getting-started.md  introduction.md  plugins.md  prebuilt-presets.md  preset-common.md  preset-tv-show-ref.md  presets-helpers.md  presets-tv-shows.md  scripting.md  static-variables.md  subscription-yaml.md  usage.md
scripts/: configure_r2_cors.py  generate-icons.mjs  generate-wordmark.mjs  sync_consumer.py  sync_downloads.py  sync_producer.py  sync_subscriptions.py
specs/001-curated-video-feed/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-feed-scoring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-migrate-video-hosting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-video-sync-producer/: plan.md  spec.md  tasks.md
specs/005-scored-video-discovery/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-queue-consumer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: proxy.ts
src/app/: globals.css  (+3 more)
tests/: test_sync_consumer.py  test_sync_producer.py
ytdl-sub/: config.yaml
(+93 files in other folders)
